test/std/negative/division_by_zero.ls
// Test: Division by Zero Error
// Category: negative
// Type: positive
// Expected: inf

// Test division by zero should fail
let a = 10
let b = 0
a / b
